figuring out plan

--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -52,6 +52,7 @@
     </div>
 </nav>
 
+
 <div class="main">
     <div class="upper">
         <div id= "upperLeft" class="left panel">
@@ -92,8 +93,8 @@
             </table>
         </div>
     </div>
+	<div id='testDiv'></div>
 </div>
-<script>(function(){ createPlan(); })(); </script>
 
 <!--<p id="notice"><%= notice %></p>
 
@@ -123,6 +124,4 @@
 
 <%= link_to 'New Plan', new_plan_path %>
 
-<div id="testDiv"></div> 
-<input type='text' id='calendarField' /> -->
 </body>
