--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <%= render "layouts/header" %>
+  
 
   <head>
-    <title>JacobsBlog</title>
+    <title>Project6</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+	<%= yield %>
   </head>
 
   <body>
-    <%= yield %>
   </body>
   
 </html>
