--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -35,6 +35,9 @@
             <div class="container">
                 <div id="accordion">
                 </div>
+				<div id="trash" ondragover='hoverOverTrash(event)' ondrop='dropInTrash(event)'>
+					<i class="fa fa-trash" aria-hidden="true"></i>
+				</div>
             </div>
         </div>
 
