--- a/app/assets/stylesheets/project4.css
+++ b/app/assets/stylesheets/project4.css
@@ -190,3 +190,7 @@ table div, .dataTables_scrollHead, .dataTables_scrollHeadInner, .dataTables_scro
 .fsuccess{
     color: green;
 }
+
+#trash{
+	font-size: 64px;
+}
