--- a/app/assets/stylesheets/project4.css
+++ b/app/assets/stylesheets/project4.css
@@ -62,6 +62,10 @@ form button:hover, form button:active {
     background-color: #7b9095;
 }
 
+.dataTables_scrollHeadInner{
+	padding: 0 !important;
+}
+
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active{
     background-color: #b4bfba;
 }
