Check requirments are fulfilled

--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -55,6 +55,7 @@
                 <p id="hrsCurrent">Current Hours: </p>
 				<p id="hrsFuture">Remaining Hours: </p>
                 <p id="hrsTotal">Total Hours Planned: </p>
+                <p id="requirments">Requirments </p>
             </div>
         </div>
 
