Fix requirement checking after merge

--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -47,8 +47,9 @@
             <header class="panelHeader">Hours</header>                                  <div class="container">
                 <p id="hrsCompleted">Hours Completed: </p>
                 <p id="hrsCurrent">Current Hours: </p>
-				<p id="hrsFuture">Remaining Hours: </p>
+				        <p id="hrsFuture">Remaining Hours: </p>
                 <p id="hrsTotal">Total Hours Planned: </p>
+                <p id="requirements">Requirements </p>
             </div>
         </div>
 
